Stretch video correctly

--- a/src/app/facevideo/facevideo.component.less
+++ b/src/app/facevideo/facevideo.component.less
@@ -3,12 +3,18 @@
 :host {
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
 
-    > * {
-        .layer;
+    video {
+        width: auto;
+        height: 100%;
     }
 
     .overlay {
+        .layer;
         display: flex;
         flex-flow: column;
         align-items: center;
